--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <div id="header-logo">
         <img src="./images/logo.png" alt="">
         </div>
+        <div id="nav">
+            <img src="images/navicon.png" alt="">
+        </div>
         <div class="headerPara">
             <p id="headerPara-p1" class="roboto-bold">CALL OUR OFFICES NOW!</p>
             <h1 class="roboto-bold">540.433.6906</h1>
@@ -38,7 +41,7 @@
         <div id="section1-img">
         <img src="./images/section1img1.gif" alt="">
         </div>
-        <div id="section1-box">
+        <!-- <div id="section1-box">
             <div id="section1-box-part1">
                 <h2>QUESTIONS?</h2>
                 <div id="section1-box-part1-para">
@@ -70,7 +73,42 @@
                     <img src="/images/arrow1.png" alt="img">
                 </div>
             </div>
-        </div>
+        </div> -->
+        <div id="section1-box">
+            
+            <div id="section1-box-part1">
+                <h2>QUESTIONS?</h2>
+                <div id="section1-box-part1-para">
+                <P>Have a <span>Question</span> </P>
+                <p>About your case?</p>
+            </div>            
+            </div>
+            <p id="section1-box-part2">Enter your information and get your questions answered quickly and discreetly or call us at: <span>540.433.6906</span> </p>
+            <div id="section1-box-part3">
+                <form action="#">
+                        <label for="Name" id="name">NAME:</label>
+                        <input type="text"><br>
+                        <label for="Email" id="email">EMAIL:</label>
+                        <input type="email"><br>
+                        <label for="phone" id="phone">PHONE:</label>
+                        <input type="text">
+                </form>
+                <div id="confidential">
+                <img src="images/confidential.png" alt="img">
+                </div>                
+            </div>
+            <div id="section1-box-part3">
+                <textarea name="textarea" id="textarea" rows="3" cols="48">Tell us about your case here...</textarea>
+            </div>
+            <div id="section1-box-part4">
+                <p>100% Privacy Guaranteed</p>
+                <div id="section1-box-part4-part2">
+                    <h3>Ask Us About Your Case</h3>
+                    <img src="/images/arrow1.png" alt="img">
+                </div>
+            </div>
+        
+    </div>
     </div>
     <div class="section2">
         <div id="section2-part1">            
@@ -167,9 +205,11 @@
             </div>
             <h2 id="section4-part1-learn">LEARN <span>MORE</span> ABOUT</h2>
             <div id="menu-area">
+            <div >
                 <h1>MENU</h1>
                 <h1>AREA</h1>
                 <h1>HERE</h1>
+            </div>
             </div>
         </div>
         <div id="section4-part2">
@@ -181,21 +221,21 @@
                 <h2 >CLIENT <span>TESTIMONIALS</span></h2>
                 <P>Read what others say about keefer Law Firm.</P>
                 <div id="section4-part3-part1-buttons">
-                    <button id="click">LEARN MORE<img src="images/arrow1.png" alt="img"></button>            
+                    <button id="click">CLICK HERE<img src="images/arrow1.png" alt="img"></button>            
                 </div>
             </div>
             <div id="section4-part3-part1">
                 <h2 >DOWNLOAD <span>FREE</span> REPORTS</h2>
                 <P>Discover the truth above Virginia Law.</P>
                 <div id="section4-part3-part1-buttons">
-                    <button id="click">LEARN MORE<img src="images/arrow1.png" alt="img"></button>            
+                    <button id="click">CLICK HERE<img src="images/arrow1.png" alt="img"></button>            
                 </div>
             </div>
             <div id="section4-part3-part1">
                 <h2 >CONTACT <span>OUR</span> OFFICES</h2>
                 <P>Get your questions answered right noew.</P>
                 <div id="section4-part3-part1-buttons">
-                    <button id="click">LEARN MORE<img src="images/arrow1.png" alt="img"></button>            
+                    <button id="click">CLICK HERE<img src="images/arrow1.png" alt="img"></button>            
                 </div>
             </div>
             <div id="section4-images">
