--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
     <div class="header">
         <div id="header-logo">
-        <img src="./images/logo.png" alt="">
+        <img src="./images/logo.png" alt="">            
         </div>
         <div id="nav">
             <img src="images/navicon.png" alt="">
@@ -40,8 +40,8 @@
     <div class="section1">
         <div id="section1-img">
         <img src="./images/section1img1.gif" alt="">
-        </div>
-        <!-- <div id="section1-box">
+        </div>        
+        <div id="section1-box">            
             <div id="section1-box-part1">
                 <h2>QUESTIONS?</h2>
                 <div id="section1-box-part1-para">
@@ -64,41 +64,7 @@
                 </div>                
             </div>
             <div id="section1-box-part3">
-                <textarea name="textarea" id="textarea" rows="3" cols="48">Tell us about your case here...</textarea>
-            </div>
-            <div id="section1-box-part4">
-                <p>100% Privacy Guaranteed</p>
-                <div id="section1-box-part4-part2">
-                    <h3>Ask Us About Your Case</h3>
-                    <img src="/images/arrow1.png" alt="img">
-                </div>
-            </div>
-        </div> -->
-        <div id="section1-box">
-            
-            <div id="section1-box-part1">
-                <h2>QUESTIONS?</h2>
-                <div id="section1-box-part1-para">
-                <P>Have a <span>Question</span> </P>
-                <p>About your case?</p>
-            </div>            
-            </div>
-            <p id="section1-box-part2">Enter your information and get your questions answered quickly and discreetly or call us at: <span>540.433.6906</span> </p>
-            <div id="section1-box-part3">
-                <form action="#">
-                        <label for="Name" id="name">NAME:</label>
-                        <input type="text"><br>
-                        <label for="Email" id="email">EMAIL:</label>
-                        <input type="email"><br>
-                        <label for="phone" id="phone">PHONE:</label>
-                        <input type="text">
-                </form>
-                <div id="confidential">
-                <img src="images/confidential.png" alt="img">
-                </div>                
-            </div>
-            <div id="section1-box-part3">
-                <textarea name="textarea" id="textarea" rows="3" cols="48">Tell us about your case here...</textarea>
+                <textarea name="textarea" id="textarea" rows="3" cols="48" placeholder="Tell us about your case here..."></textarea>
             </div>
             <div id="section1-box-part4">
                 <p>100% Privacy Guaranteed</p>
@@ -143,7 +109,7 @@
             </div>
         </div>
         <div id="section2-part2-part2">           
-            <div>
+            <div id="section2-part2-part2-content">
             <h2>CASE <span>RESULTS</span></h2>
             <p>See how we help our clients. <br> Read our latest case results.</p>
             
@@ -248,7 +214,7 @@
                     <img src="/images/facebook.gif" alt="">
                     <img src="/images/google.gif" alt="">
                     <img src="/images/twitter.gif" alt="">
-                    <img src="/images/linkedin.gif" alt="">
+                    <img src="/images/linkedin.gif" alt="" id="ln">
                 </div>
             </div>
         </div>
