--- a/index.html
+++ b/index.html
@@ -20,22 +20,21 @@
             <img src="images/navicon.png" alt="">
         </div>
         <div class="headerPara">
-            <p id="headerPara-p1" class="roboto-bold">CALL OUR OFFICES NOW!</p>
+            <p id="headerPara-p1" >CALL OUR OFFICES NOW!</p>
             <h1 class="roboto-bold">540.433.6906</h1>
-            <p id="headerPara-p2" class="roboto-medium">Get Your Quesitons Answered Fast</p>
+            <p id="headerPara-p2" >Get Your Quesitons Answered Fast</p>
         </div>
     </div>
     </div>
     </div>
     <div class="container2">
-    <div class="bar">
-               
+    <div class="bar">               
         <a href="#" id="home">HOME</a>
-        <a href="#">BIOGRAPHY</a>
-        <a href="#">BLOG</a>
-        <a href="#">AREAS WE SERVE</a>
-        <a href="#">LIBRARY</a>
-        <a href="#">CONTACT</a>
+        <a href="#" id="home">BIOGRAPHY</a>
+        <a href="#" id="home">BLOG</a>
+        <a href="#" id="home">AREAS WE SERVE</a>
+        <a href="#" id="home">LIBRARY</a>
+        <a href="#" id="home">CONTACT</a>
   
     </div>
     </div>
